@@ -195,6 +195,13 @@ def session_scoped(cls):
     return cls
 
 
+class TransactionVeto(object):
+    should_commit = None
+    @property
+    def has_voted(self):
+        return self.should_commit is not None
+
+
 class SqlAlchemyControl(ORMControl):
     """An ORMControl for dealing with SQLAlchemy."""
     def __init__(self, echo=False):
@@ -202,33 +209,24 @@ class SqlAlchemyControl(ORMControl):
         self.engine = None
 
     @contextmanager
-    def nested_transaction2(self):
-        # TODO: this is an experiment...
-        """A context manager for code that needs to run in a nested transaction."""
-        transaction = Session.begin_nested()
-        class TransactionVote(object):
-            should_commit = False
-        transaction_vote = TransactionVote()
-        try:
-            yield transaction_vote
-        finally:
-            if transaction_vote.should_commit:
-                self.commit()
-            else:
-                self.rollback()
-
-    @contextmanager
     def nested_transaction(self):
-        """A context manager for code that needs to run in a nested transaction."""
+        """A context manager for code that needs to run in a nested transaction.
+        
+        .. versionchanged:: 4.1
+           Changed to yield a TransactionVeto which can be used to override when the transaction will be committed or not.
+        """
         transaction = Session.begin_nested()
+        transaction_veto = TransactionVeto()
         try:
-            yield transaction
+            yield transaction_veto
         except Exception as ex:
             commit = getattr(ex, 'commit', False)
             raise
         else:
             commit = True
         finally:
+            if transaction_veto.has_voted:
+                commit = transaction_veto.should_commit
             if commit:
                 self.commit()
             else:
